# csvql

./: Cargo.toml  README.md
data/: departments.csv  employees.csv
src/: aggregator.rs  ast.rs  engine.rs  error.rs  lexer.rs  loader.rs  main.rs  output.rs  parser.rs  planner.rs  types.rs
