[package]
name = "csvql"
version = "0.1.0"
edition = "2021"
description = "Run SQL queries against CSV files from the terminal"
license = "MIT"

[dependencies]
csv = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
comfy-table = "7"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
